# hosi-dashboard

./: .gitignore  AGENTS.md  README.md  package.json  railway.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: pyproject.toml  railway.toml
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/services/: data_store.py  methodology.py
backend/etl/: build_hosi.py
backend/hosi_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_api.py  test_etl.py  test_methodology.py
data/processed/: component_scores.parquet  hosi.duckdb  hosi_monthly.parquet  methodology.json  sources.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: MetricCard.stories.tsx  MetricCard.tsx  SectionChart.stories.tsx  SectionChart.tsx
frontend/src/lib/: api.ts
frontend/src/test/: setup.ts
frontend/src/testing/: sampleData.ts
frontend/tests/e2e/: dashboard.spec.ts  global-setup.ts  global-teardown.ts
frontend/tests/storybook/: stories.test.tsx
frontend/tests/unit/: MetricCard.test.tsx  SectionChart.test.tsx  api.test.ts
